--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -2263,6 +2263,10 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lockClosed" translatesAutoresizingMaskIntoConstraints="NO" id="9yr-Jv-ewM">
+                                            <rect key="frame" x="74" y="71" width="13" height="18"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -3189,6 +3193,7 @@
         <image name="friend_accept" width="80" height="80"/>
         <image name="friend_dismiss" width="80" height="80"/>
         <image name="inactiveTimeSlider" width="140" height="140"/>
+        <image name="lockClosed" width="87" height="112"/>
         <image name="noFriends" width="512" height="512"/>
         <image name="profileMenuButton" width="140" height="140"/>
         <image name="shareEveryone_on" width="340" height="80"/>
